--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,10 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! It's great!</h1>
+<h1>Hello Coursera! It's great! Hiih</h1> 
+
+<script type='text/javascript' id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.2.11.1.js'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 </body>
 </html>
